hphp/test/slow/readonly_tdb/bad_options2.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'ROTDB\Basic\ret_ro() returns readonly, but the caller expects a mutable value' in %s/test/slow/readonly_tdb/bad_options2.php:15
Stack trace:
#0 {main}